--- a/SiparisYonetimiD.Data/SiparisYonetimiD.Data.csproj
+++ b/SiparisYonetimiD.Data/SiparisYonetimiD.Data.csproj
@@ -52,6 +52,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DatabaseContext.cs" />
+    <Compile Include="Migrations\202209201436253_InitialCreate.cs" />
+    <Compile Include="Migrations\202209201436253_InitialCreate.designer.cs">
+      <DependentUpon>202209201436253_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -63,6 +68,11 @@
       <Project>{FD230524-F847-40AA-8C53-5399BF1B4297}</Project>
       <Name>SiparisYonetimiD.Entities</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\202209201436253_InitialCreate.resx">
+      <DependentUpon>202209201436253_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
