--- a/SiparisYonetimiD.WinFormsUI/App.config
+++ b/SiparisYonetimiD.WinFormsUI/App.config
@@ -13,6 +13,6 @@
 		</providers>
 	</entityFramework>
 	<connectionStrings>
-		<add name="DatabaseContext" connectionString="server=(localdb)\MSSQLLocalDB; Database=SiparisYonetimiD; integrated security=True" />
+		<add name="DatabaseContext" connectionString="server=(localdb)\MSSQLLocalDB; Database=SiparisYonetimiD; integrated security=True" providerName="System.Data.SqlClient" />
 	</connectionStrings>
 </configuration>
