--- a/SiparisYonetimiD.Business/SiparisYonetimiD.Business.csproj
+++ b/SiparisYonetimiD.Business/SiparisYonetimiD.Business.csproj
@@ -53,6 +53,8 @@
   <ItemGroup>
     <Compile Include="Managers\UserManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\IRepository.cs" />
+    <Compile Include="Repositories\Repository.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SiparisYonetimiD.Data\SiparisYonetimiD.Data.csproj">
